[gd_scene load_steps=3 format=3 uid="uid://dquak7ptkck7c"]

[ext_resource type="PackedScene" uid="uid://voxnbub71wph" path="res://Menus/modal_template.tscn" id="1_of2fd"]
[ext_resource type="Script" path="res://Menus/PauseMenu/pause_menu.gd" id="2_rckjc"]

[node name="PauseMenu" instance=ExtResource("1_of2fd")]
process_mode = 3
script = ExtResource("2_rckjc")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "- Pause -"
uppercase = true

[node name="BtnReturn" type="Button" parent="Panel/MarginContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "Return"

[node name="BtnQuit" type="Button" parent="Panel/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/BtnReturn" to="." method="_on_btn_return_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/BtnQuit" to="." method="_on_btn_quit_pressed"]
